rudy-db/tests/snapshots/enum_type_resolution-2.snap
---
source: rudy-db/tests/resolve.rs
expression: repr_c_typedef
snapshot_kind: text
---
(
    Enum(
        EnumLayout {
            name: "ReprCEnum",
            discriminant: Discriminant {
                ty: UnsignedInt(
                    UnsignedIntLayout {
                        size: 4,
                    },
                ),
                offset: 0,
            },
            variants: [
                EnumVariantLayout {
                    name: "Unit",
                    discriminant: Some(
                        0,
                    ),
                    layout: Alias(
                        UnresolvedType {
                            name: "Unit",
                            cu_offset: 0,
                            die_offset: 31975,
                        },
                    ),
                },
                EnumVariantLayout {
                    name: "Tuple",
                    discriminant: Some(
                        1,
                    ),
                    layout: Alias(
                        UnresolvedType {
                            name: "Tuple",
                            cu_offset: 0,
                            die_offset: 31983,
                        },
                    ),
                },
                EnumVariantLayout {
                    name: "Struct",
                    discriminant: Some(
                        2,
                    ),
                    layout: Alias(
                        UnresolvedType {
                            name: "Struct",
                            cu_offset: 0,
                            die_offset: 32016,
                        },
                    ),
                },
            ],
            size: 40,
        },
    ),
    DebugFile {
        [salsa id]: Id(801),
    },
)
