rudy-db/tests/snapshots/enum_type_resolution-3.snap
---
source: rudy-db/tests/resolve.rs
expression: option_typedef
snapshot_kind: text
---
(
    Std(
        Option(
            OptionLayout {
                name: "Option<i32>",
                discriminant: Discriminant {
                    ty: UnsignedInt(
                        UnsignedIntLayout {
                            size: 4,
                        },
                    ),
                    offset: 0,
                },
                some_offset: 4,
                some_type: Primitive(
                    Int(
                        IntLayout {
                            size: 4,
                        },
                    ),
                ),
                size: 8,
            },
        ),
    ),
    DebugFile {
        [salsa id]: Id(801),
    },
)
