rudy-db/tests/snapshots/enum_type_resolution.snap
---
source: rudy-db/tests/dynamic_tests.rs
expression: test_enum_typedef
---
(
    Enum(
        EnumLayout {
            name: "TestEnum",
            discriminant: Discriminant {
                ty: UnsignedInt(
                    UnsignedIntLayout {
                        size: 8,
                    },
                ),
                offset: 0,
            },
            variants: [
                EnumVariantLayout {
                    name: "Unit",
                    discriminant: Some(
                        9223372036854775808,
                    ),
                    layout: Alias(
                        UnresolvedType {
                            name: "Unit",
                            cu_offset: 0,
                            die_offset: 18305,
                        },
                    ),
                },
                EnumVariantLayout {
                    name: "Tuple",
                    discriminant: None,
                    layout: Alias(
                        UnresolvedType {
                            name: "Tuple",
                            cu_offset: 0,
                            die_offset: 18313,
                        },
                    ),
                },
                EnumVariantLayout {
                    name: "Struct",
                    discriminant: Some(
                        9223372036854775810,
                    ),
                    layout: Alias(
                        UnresolvedType {
                            name: "Struct",
                            cu_offset: 0,
                            die_offset: 18346,
                        },
                    ),
                },
            ],
            size: 32,
        },
    ),
    DebugFile {
        [salsa id]: Id(804),
    },
)
