rudy-db/tests/snapshots/enum_type_resolution@aarch64-apple-darwin-2.snap
---
source: rudy-db/tests/static_tests.rs
expression: repr_c_typedef
snapshot_kind: text
---
TypeDefinition {
    layout: Enum(
        EnumLayout {
            name: "ReprCEnum",
            discriminant: Discriminant {
                ty: UnsignedInt(
                    UnsignedIntLayout {
                        size: 4,
                    },
                ),
                offset: 0,
            },
            variants: [
                EnumVariantLayout {
                    name: "Unit",
                    discriminant: Some(
                        0,
                    ),
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Unit",
                        },
                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/examples/enums-6089fa49a62bd7f1.236ahwzmws8e14oxugah92weq.1t4xesi.rcgu.o 0x0000089c,
                    },
                },
                EnumVariantLayout {
                    name: "Tuple",
                    discriminant: Some(
                        1,
                    ),
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Tuple",
                        },
                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/examples/enums-6089fa49a62bd7f1.236ahwzmws8e14oxugah92weq.1t4xesi.rcgu.o 0x000008a4,
                    },
                },
                EnumVariantLayout {
                    name: "Struct",
                    discriminant: Some(
                        2,
                    ),
                    layout: TypeDefinition {
                        layout: Alias {
                            name: "Struct",
                        },
                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/examples/enums-6089fa49a62bd7f1.236ahwzmws8e14oxugah92weq.1t4xesi.rcgu.o 0x000008c5,
                    },
                },
            ],
            size: 40,
        },
    ),
    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/examples/enums-6089fa49a62bd7f1.236ahwzmws8e14oxugah92weq.1t4xesi.rcgu.o 0x0000085d,
}
