rudy-db/tests/snapshots/enum_type_resolution@aarch64-apple-darwin-3.snap
---
source: rudy-db/tests/static_tests.rs
expression: option_typedef
snapshot_kind: text
---
TypeDefinition {
    layout: Std(
        Option(
            OptionLayout {
                name: "Option<i32>",
                discriminant: Discriminant {
                    ty: UnsignedInt(
                        UnsignedIntLayout {
                            size: 4,
                        },
                    ),
                    offset: 0,
                },
                some_offset: 4,
                some_type: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die(
                        Id(186b),
                    ),
                },
                size: 8,
            },
        ),
    ),
    location: Die(
        Id(1860),
    ),
}
