rudy-db/tests/snapshots/enum_type_resolution@aarch64-apple-darwin-4.snap
---
source: rudy-db/tests/static_tests.rs
expression: result_typedef
snapshot_kind: text
---
TypeDefinition {
    layout: Std(
        Result(
            ResultLayout {
                name: "Result<i32, alloc::string::String>",
                discriminant: Discriminant {
                    ty: UnsignedInt(
                        UnsignedIntLayout {
                            size: 8,
                        },
                    ),
                    offset: 0,
                },
                ok_type: TypeDefinition {
                    layout: Primitive(
                        Int(
                            IntLayout {
                                size: 4,
                            },
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/enums-6089fa49a62bd7f1.236ahwzmws8e14oxugah92weq.11duw25.rcgu.o 0x000008ef,
                },
                ok_offset: 8,
                err_type: TypeDefinition {
                    layout: Std(
                        String(
                            StringLayout(
                                VecLayout {
                                    length_offset: 16,
                                    data_ptr_offset: 8,
                                    capacity_offset: 0,
                                    inner_type: TypeDefinition {
                                        layout: Primitive(
                                            UnsignedInt(
                                                UnsignedIntLayout {
                                                    size: 1,
                                                },
                                            ),
                                        ),
                                        location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/enums-6089fa49a62bd7f1.236ahwzmws8e14oxugah92weq.11duw25.rcgu.o 0x000001c6,
                                    },
                                },
                            ),
                        ),
                    ),
                    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/enums-6089fa49a62bd7f1.236ahwzmws8e14oxugah92weq.11duw25.rcgu.o 0x000000f9,
                },
                err_offset: 0,
                size: 24,
            },
        ),
    ),
    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/enums-6089fa49a62bd7f1.236ahwzmws8e14oxugah92weq.11duw25.rcgu.o 0x000002ea,
}
