rudy-db/tests/snapshots/enum_type_resolution@aarch64-apple-darwin-5.snap
---
source: rudy-db/tests/static_tests.rs
expression: u8_enum_typedef
snapshot_kind: text
---
TypeDefinition {
    layout: CEnum(
        CEnumLayout {
            name: "U8Enum",
            discriminant_type: UnsignedInt(
                UnsignedIntLayout {
                    size: 1,
                },
            ),
            variants: [
                CEnumVariant {
                    name: "First",
                    value: 0,
                },
                CEnumVariant {
                    name: "Second",
                    value: 1,
                },
                CEnumVariant {
                    name: "Third",
                    value: 2,
                },
                CEnumVariant {
                    name: "Fifth",
                    value: 5,
                },
            ],
            size: 1,
        },
    ),
    location: Die [CARGO_WORKSPACE_DIR]/test-artifacts/aarch64-apple-darwin/enums-4ed4a2f18de4d16a.ewahujymv3a3w50no99glyex8.0gzg4p4.rcgu.o 0x000004f2,
}
