rudy-db/tests/snapshots/enum_type_resolution@aarch64-unknown-linux-gnu-2.snap
---
source: rudy-db/tests/static_tests.rs
expression: repr_c_typedef
snapshot_kind: text
---
Enum(
    EnumLayout {
        name: "ReprCEnum",
        discriminant: Discriminant {
            ty: UnsignedInt(
                UnsignedIntLayout {
                    size: 4,
                },
            ),
            offset: 0,
        },
        variants: [
            EnumVariantLayout {
                name: "Unit",
                discriminant: Some(
                    0,
                ),
                layout: Alias(
                    UnresolvedType {
                        name: "Unit",
                        cu_offset: 0,
                        die_offset: 1441,
                    },
                ),
            },
            EnumVariantLayout {
                name: "Tuple",
                discriminant: Some(
                    1,
                ),
                layout: Alias(
                    UnresolvedType {
                        name: "Tuple",
                        cu_offset: 0,
                        die_offset: 1449,
                    },
                ),
            },
            EnumVariantLayout {
                name: "Struct",
                discriminant: Some(
                    2,
                ),
                layout: Alias(
                    UnresolvedType {
                        name: "Struct",
                        cu_offset: 0,
                        die_offset: 1482,
                    },
                ),
            },
        ],
        size: 40,
    },
)
